--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.1",
     "node-localstorage": "^2.2.1",
     "nodemon": "^2.0.22"
   }
